changed code, so you can see sort in top categorie and new drinks automaticly get a sort assigned

--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -44,7 +44,7 @@
         <form class="add-category-form">
           <input type="text" name="category" placeholder="Kategorie" required />
           <input type="text" name="name" placeholder="Getränkname" required />
-          <input type="text" name="hinweis" placeholder="Hinweis" />
+          <input type="number" name="sort" placeholder="Sortierung" step="1" required/>
           <input
             type="number"
             name="price"
