changed blod to online saving the images

--- a/views/blog.ejs
+++ b/views/blog.ejs
@@ -32,7 +32,7 @@
         <% } %>
 
         <!-- The image is loaded via the /image/:id route -->
-        <img src="/uploads/<%= post.main_image %>" alt="<%= post.title %>" />
+        <img src="<%= post.main_image %>" alt="<%= post.title %>" />
         <div class="card-content-blog">
           <h2><%= post.heading %></h2>
           <div class="date-blog">
