--- a/public/styles.css
+++ b/public/styles.css
@@ -1077,9 +1077,13 @@ input[type="radio"]:checked + .radio-label {
   position: relative;
 }
 .card-blog img {
-  width: 100%;
+  /* width: 100%; */
   max-height: 400px;
   display: block;
+}
+
+.img400h{
+  height: 400px;
 }
 .card-content-blog {
   padding: 15px;
