--- a/views/blogPost.ejs
+++ b/views/blogPost.ejs
@@ -18,7 +18,7 @@
         text-align: center;
       }
       .main-image img {
-        height: 500px;
+        width: 100%;
         border-radius: 8px;
         object-fit: cover;
       }
