changed padding button editBlog

--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -89,7 +89,9 @@
               multiple
             />
 
-            <button type="submit">Post aktualisieren</button>
+            <button 
+            style="padding-top: 30px;"
+            type="submit">Post aktualisieren</button>
           </div>
         </form>
       </div>
