changed padding button editBlog

--- a/views/editBlog.ejs
+++ b/views/editBlog.ejs
@@ -90,7 +90,7 @@
             />
 
             <button 
-            style="padding-top: 30px;"
+            style="padding: 30px;"
             type="submit">Post aktualisieren</button>
           </div>
         </form>
