--- a/views/blogPost.ejs
+++ b/views/blogPost.ejs
@@ -21,6 +21,8 @@
         width: 100%;
         border-radius: 8px;
         object-fit: cover;
+        max-height: 500px;
+        max-height: 400px;
       }
       .extra-images {
         display: flex;
