changed eventbuchung more stylisch

--- a/views/eventbuchung.ejs
+++ b/views/eventbuchung.ejs
@@ -14,9 +14,9 @@
     <div class="section">
       <%- include('partials/header') %>
       <div class="container">
-        <h1 class="center">Eventbuchung</h1>
-        <h3>Willst du eine Feier bei mir veranstalten?</h3>
-        <p>
+        <h1 class="center p-b-40" >Eventbuchung</h1>
+        <h3 class="center p-b-20">Willst du eine Feier bei mir veranstalten?</h3>
+        <p class="center p-b-20">
           Such dir zunächst eine Eventart aus und schreibe mir deine
           Vorstellungen. Ich melde mich bei dir, dann besprechen wir alles
           weitere 🎉
