--- a/public/styles.css
+++ b/public/styles.css
@@ -49,12 +49,20 @@ h3 {
   margin-bottom: 0;
 }
 
+.p-b-20{
+  padding-bottom: 20px !important;
+}
+
+.p-b-40 {
+  padding-bottom: 40px !important;
+}
+
 .p-b-60 {
-  padding-bottom: 60px;
+  padding-bottom: 60px !important;
 }
 
 .p-b-100 {
-  padding-bottom: 100px;
+  padding-bottom: 100px !important;
 }
 
 h1,
