--- a/public/styles.css
+++ b/public/styles.css
@@ -1085,9 +1085,10 @@ input[type="radio"]:checked + .radio-label {
   position: relative;
 }
 .card-blog img {
-  /* width: 100%; */
-  max-height: 400px;
+  width: 100%;
+  height: 400px;
   display: block;
+  object-fit: fill;
 }
 
 .img400h{
