--- a/views/blogPost.ejs
+++ b/views/blogPost.ejs
@@ -18,11 +18,11 @@
         text-align: center;
       }
       .main-image img {
-        width: 100%;
         border-radius: 8px;
-        object-fit: cover;
-        max-height: 500px;
-        max-height: 400px;
+        object-fit: fill;
+        height: 600px;
+        width: 400px;
+        border-radius: 10px;
       }
       .extra-images {
         display: flex;
