--- a/public/styles.css
+++ b/public/styles.css
@@ -1176,18 +1176,24 @@ textarea {
 
 .eventbuchung-radio {
   margin: 10px 0;
+  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
 }
 
 .radio-item {
   display: grid;
-  grid-template-rows: 1fr 1fr;
   text-align: center;
   border-radius: 8px;
 }
 
-.radio-event:last-child {
-  grid-column: span 2;
+.eventbuchung-radio .radio-item:nth-last-child(1):nth-child(odd) {
+  grid-column: span 2 /* span über alle Spalten */
 }
+
+/* .radio-event:last-child {
+  grid-column: span 2;
+} */
 
 .span2 {
   grid-column: span 2;
