--- a/public/styles.css
+++ b/public/styles.css
@@ -1175,10 +1175,10 @@ textarea {
 }
 
 .eventbuchung-radio {
-  margin: 10px 0;
-  gap: 20px;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
+  gap: 0.5rem;
+  margin-bottom: 1rem;
 }
 
 .radio-item {
