--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,6 +26,7 @@ rel="stylesheet"
         <a href="/geschichte">Geschichte</a>
         <a href="/blog">Aktuelles</a>
         <a href="/menu">Getränkekarte</a>
+        <a href="/tischreservierung">Tischreservierung</a>
         <a href="/eventbuchung">Feier buchen</a>
         <!-- <a href="/reservation" class="reserve-button">Reservierung</a> -->
       </div>
