--- a/views/index.ejs
+++ b/views/index.ejs
@@ -255,7 +255,7 @@
               <a href="/menu">Getränken</a> an.
             </p>
           </div>
-          <div class="img-container right-image flex_einfliegen">
+          <div class="img-container flex_einfliegen">
             <!-- <img src="/images/EingangmitSchrift.webp" alt="Eingangsbereich heute" /> -->
             <section class="autoplay-video" aria-label="Intro-Video">
               <div class="video-wrap">
