added reference from me to footer

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -38,7 +38,7 @@
   <div class="second-row">
     <div class="flex-row">
       <div>
-        <p>© Zur alten Backstube <%= new Date().getFullYear() %></p>
+        <p>© Zur alten Backstube <%= new Date().getFullYear() %>. Erstellt durch <a href="https://www.komplettwebdesign.de"><strong>Komplett Webdesign</strong> </p>
       </div>
       <div class="right-footer end-footer">
         <a href="/impressum">Impressum</a>
