--- a/views/eventbuchung.ejs
+++ b/views/eventbuchung.ejs
@@ -57,7 +57,7 @@
           Willst du eine Feier bei mir veranstalten?
         </h3>
         <p class="center p-b-20">
-          Such dir zunächst eine Anlass aus und schreibe mir deine
+          Such dir zunächst einen Anlass aus und schreibe mir deine
           Vorstellungen. Ich melde mich bei dir, dann besprechen wir alles
           weitere 🎉
         </p>
