--- a/views/index.ejs
+++ b/views/index.ejs
@@ -303,7 +303,7 @@
     <div class="section overflow-hidden padding-tb-40">
       <div class="container">
         <div class="flex-space-between flex-reverse-main">
-          <div class="img-container left-image flex_einfliegen">
+          <div class="img-container flex_einfliegen">
             <img src="/images/2024-03-05.webp" alt="Esstisch für 2 Personen" />
           </div>
           <div class="main-content">
@@ -345,7 +345,7 @@
               >
             </div>
           </div>
-          <div class="img-container last right-image flex_einfliegen">
+          <div class="img-container last flex_einfliegen">
             <img src="/images/2024-07-22.webp" alt="Esstisch für 3 Personen" />
           </div>
         </div>
