--- a/views/index.ejs
+++ b/views/index.ejs
@@ -304,7 +304,7 @@
       <div class="container">
         <div class="flex-space-between flex-reverse-main">
           <div class="img-container flex_einfliegen">
-            <img src="/images/2024-03-05.webp" alt="Esstisch für 2 Personen" />
+            <img src="/images/img2.webp" alt="Esstisch für 2 Personen" />
           </div>
           <div class="main-content">
             <h3>Was erwartet dich bei uns</h3>
